samples/_failures_safe/1761486113_3a1b85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c83e3ab1.c: In function ‘main’:
./samples/SAFE/__tmp_c83e3ab1.c:173:9: error: expected declaration or statement at end of input
  173 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_c83e3ab1.c:173:9: error: expected declaration or statement at end of input
